[package]
name = "cs"
version = "0.0.3"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "Find common substrings among multiple input strings"
license = "MIT"
repository = "https://github.com/TianyiShi2001/cs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suffix = "1.2.0"
